--- a/06-loading-data.Rmd
+++ b/06-loading-data.Rmd
@@ -4,11 +4,11 @@ Like we learned <a href = 'downloading-r-and-rstudio.html#env'>before</a>, you'l
 
 ## Data Files
 
-Most of the time, you'll want to work with something called a <span class = 'vocab'>**CSV**</span> file. CSV stands for **C**omma **S**eparated **V**alue, which means that all of the data within an observation is separated by a comma. <a href = '/data/Combined Fall 2017 Survey 1.csv'>Here's an example CSV file</a> that you can download. To see the raw file, you can open it in a program like TextEdit on a Mac or Notepad on PC. Usually, a CSV file will default to open in a spreadsheet program like Excel since it's easy to <span class = 'vocab'>**parse**</span> (read in and break up) into columns -- this is because of the commas!
+Most of the time, you'll want to work with something called a <span class = 'vocab'>CSV</span> file. CSV stands for **C**omma **S**eparated **V**alue, which means that all of the data within an observation is separated by a comma [Here's an example CSV file](data/Combined Fall 2017 Survey 1.csv) that you can download. To see the raw file, you can open it in a program like TextEdit on a Mac or Notepad on PC. Usually, a CSV file will default to open in a spreadsheet program like Excel since it's easy to <span class = 'vocab'>parse</span> (read in and break up) into columns -- this is because of the commas!
 
 ## Reading in CSV Files
 
-To read a CSV into `R`, there's a great function called `read.csv()`. It will read in your file as a data frame. To read in the file, you just need to put the name of the file as a charachter string (remember your <a href = 'functions-and-data-types.html#02-character'>data types</a>?) in between the parenthesis. This is the only required <span class = 'vocab'>**argument**</span>, or input to a function, that you need to supply, however there are a few others to note:
+To read a CSV into `R`, there's a great function called `read.csv()`. It will read in your file as a data frame. To read in the file, you just need to put the name of the file as a charachter string (remember your <a href = 'functions-and-data-types.html#02-character'>data types</a>?) in between the parenthesis. This is the only required <span class = 'vocab'>argument</span>, or input to a function, that you need to supply, however there are a few others to note:
 
 - The `stringsAsFactors` argument can be either a `TRUE` or `FALSE` value. When `TRUE` (this argument's default value), it takes any character strings in the data and coerces them to be factors. Sometimes this may be okay, sometimes not
 
@@ -16,7 +16,7 @@ To read a CSV into `R`, there's a great function called `read.csv()`. It will re
 
 ### Directories {-}
 
-One common issue is the location on your computer where the CSV is located. If you just type the name of the file as the argument for `read.csv()`, `R` will look for it in your <span class = 'vocab'>**working directory**</span>, or default file lookup location. However, if your file isn't present in the working directory, you'll likely get an error message. If this is the case, you have a few options:
+One common issue is the location on your computer where the CSV is located. If you just type the name of the file as the argument for `read.csv()`, `R` will look for it in your <span class = 'vocab'>working directory</span>, or default file lookup location. However, if your file isn't present in the working directory, you'll likely get an error message. If this is the case, you have a few options:
 
 1) You can supply the full filepath to the data as the string. Watch [this video](https://www.youtube.com/watch?v=kIhGavBqXYc) to find how to find the full filepath for Mac or [this one](https://www.youtube.com/watch?v=th23yuZ9fOw) for PC. While it may be more work to find, it'll guarantee that you import the right file.
 
