--- a/07-style.Rmd
+++ b/07-style.Rmd
@@ -10,9 +10,9 @@ The code that you write will be read by `R`, which will ignore extra spaces, cor
 
 ## Comments
 
-There's one important symbol/operator that we left out in <a href = 'operators.html#operators'>chapter 5</a>, and that's the comment symbol. A <span class = 'vocab'>**comment**</span> is just a note for yourself so that you can explain what a block of code does, why you wrote the code a particular way, or really just anything else that you'd like to note at that point in the code. They won't be evaluated by `R` as commands, so it may be useful to even <span class = 'vocab'>**comment out**</span> parts of your code (make line(s) of code into comments to prevent them from running but save yourself from retyping). To make a comment in `R`, use `#`.
+There's one important symbol/operator that we left out in <a href = 'operators.html#operators'>chapter 5</a>, and that's the comment symbol. A <span class = 'vocab'>comment</span> is just a note for yourself so that you can explain what a block of code does, why you wrote the code a particular way, or really just anything else that you'd like to note at that point in the code. They won't be evaluated by `R` as commands, so it may be useful to even <span class = 'vocab'>comment out</span> parts of your code (make line(s) of code into comments to prevent them from running but save yourself from retyping). To make a comment in `R`, use `#`.
 
-<span class = 'tip'>***Pro tip: You can highlight whole lines of code, then go to the***</span> <span style = 'color: #00ce45'>`Code`</span> <span class = 'tip'>***menu at the top and select***</span> <span style = 'color: #00ce45'>`Comment/Uncomment Lines`</span> <span class = 'tip'>***to comment out (or uncomment) sections of code at a time. The shortcut on a Mac is***</span> <span style = 'color: #00ce45'>`Cmd + Shift + C`</span><span class = 'tip'>***, and on a PC it's***</span> <span style = 'color: #00ce45'>`Ctrl + Shift + C`</span><span class = 'tip'>***.***</span>
+<span class = 'tip'>Pro tip: You can highlight whole lines of code, then go to the</span> <span style = 'color: #00ce45'>`Code`</span> <span class = 'tip'>menu at the top and select</span> <span style = 'color: #00ce45'>`Comment/Uncomment Lines`</span> <span class = 'tip'>to comment out (or uncomment) sections of code at a time. The shortcut on a Mac is</span> <span style = 'color: #00ce45'>`Cmd + Shift + C`</span><span class = 'tip'>, and on a PC it's</span> <span style = 'color: #00ce45'>`Ctrl + Shift + C`</span><span class = 'tip'>.</span>
 
 Get in the habit of commenting frequently as you code. As we said before, these are ways for you to remember what you did so that when you revisit your code, you remember what your thought process was.
 
