--- a/index.Rmd
+++ b/index.Rmd
@@ -12,18 +12,30 @@ link-citations: yes
 highlight: haddock
 github-repo: rossdrucker/STAT-100-Honors-Project
 ---
-# Introduction {-}
+# Overview and Syllabus {-}
 
 ```{r index-setup, echo = FALSE}
 knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
 library(magrittr)
 ```
 
-## Syllabus {-}
-
 **Coordinator**: Ross Drucker
 
 **Email**: ross.a.drucker@gmail.com
+
+**Email Policy**: Start your subject with [STAT 100 Honors Project]. Also provide a quick synopsis of what you're emailing about. For example, a few subject lines could look like:
+
+- [STAT 100 Honors Project] Homework 1 Problem 2
+
+- [STAT 100 Honors Project] Question about histograms
+
+Bad subject lines can look like this:
+
+- HELP ME PLZ
+
+- idk wut i'm doing 4 hw1
+
+You can send emails from any email address you have. Allow up to 24 hours for a response if you send an email on a weekday. Over the weekend, response times may be longer. Please be patient.
 
 **Office Hours**: MWF from 2:00pm-5:00pm, TR from 3:30pm-5:00pm in 23 Illini Hall (CITES Computer Lab), or by appointment
 
@@ -51,7 +63,7 @@ library(magrittr)
 -	Each week, students should expect to spend 2-3 hours on readings and assignments
 -	All assignments will be posted on (and therefore submitted to) Lon-Capa. 
 -	Point values will vary by assignment
--	In order to receive credit for the project, you must complete all assignments with an average an 85% or higher
+-	In order to receive credit for the project, you must complete all assignments with an (combined) average of 85% or higher
 -	Assignments will be available for one week after posting. No late assignments will be accepted
 
 **Academic Integrity**: All students are expected to abide by the campus regulations on academic integrity, which can be found [here](http://studentcode.illinois.edu/article1_part4_1-401.html). These standards will be enforced and infractions of these rules will not be tolerated in this course. Such behavior includes sharing or copying any part of another student's assignment or allowing another student to copy any part of your assignment.
