--- a/index.Rmd
+++ b/index.Rmd
@@ -12,12 +12,14 @@ link-citations: yes
 highlight: haddock
 github-repo: rossdrucker/STAT-100-Honors-Project
 ---
-# Overview and Syllabus {-}
+# Intro {-}
 
 ```{r index-setup, echo = FALSE}
 knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
 library(magrittr)
 ```
+
+## Syllabus {-}
 
 **Coordinator**: Ross Drucker
 
@@ -35,7 +37,7 @@ Bad subject lines can look like this:
 
 - idk wut i'm doing 4 hw1
 
-You can send emails from any email address you have. Allow up to 24 hours for a response if you send an email on a weekday. Over the weekend, response times may be longer. Please be patient.
+In your email, please include a description of the problem you're having and any relevant code and/or error messages in the form of scripts or screenshots. Failure to do so may result in longer response times and/or no response altogether. You can send emails from any email address you have. Allow up to 24 hours for a response if you send an email Monday through Thursday. Over the weekend, response times may be longer. Please be patient.
 
 **Office Hours**: MWF from 2:00pm-5:00pm, TR from 3:30pm-5:00pm in 23 Illini Hall (CITES Computer Lab), or by appointment
 
