--- a/index.Rmd
+++ b/index.Rmd
@@ -19,72 +19,18 @@ knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, messa
 library(magrittr)
 ```
 
-## Syllabus {-}
 
-**Coordinator**: Ross Drucker
+**The who**: This project is available to James Scholars interested in learning the statistical computing language `R`. Please sign up ASAP because this is a pilot project and enrollment is limited to 50 students.
 
-**Email**: ross.a.drucker@gmail.com
+**The what**: Our James Scholar Honors Project teaches you to use the statistical software, `R`. Be prepared to spend approximately 2 hours per week on this project.
 
-**Email Policy**: Start your subject with [STAT 100 Honors Project]. Also provide a quick synopsis of what you're emailing about. For example, a few subject lines could look like:
+**The when**: Sign up ASAP by getting a HCLA form from your dean/advisor. As soon as the paperwork goes through, you're ready to go! The deadline to sign up is **Monday, January 29^th^ at 11:59pm**. There will be weekly assignments for the remainder of the semester.
 
-- [STAT 100 Honors Project] Homework 1 Problem 2
+**The how**: The project consists of weekly notes to read ($\approx$1 hour) and weekly assignments to do on Lon-Capa ($\approx$1 hour). You need to complete all the assignments and turn them in before the due date each week. Late assignments will not be accepted on Lon Capa, so make sure to keep a close eye on the calendar. All assignments are due on Sundays at 11:59pm. The first one is due **Sunday February 4^th^, 2018**. It will be posted on Friday January 19th.
 
-- [STAT 100 Honors Project] Question about histograms
+**The where**: No need to leave home and get out of your PJs for this one. All notes and assignments can be found online!
 
-Bad subject lines can look like this:
-
-- HELP ME PLZ
-
-- idk wut i'm doing 4 hw1
-
-In your email, please include a description of the problem you're having and any relevant code and/or error messages in the form of scripts or screenshots. Failure to do so may result in longer response times and/or no response altogether. You can send emails from any email address you have. Allow up to 24 hours for a response if you send an email Monday through Thursday. Over the weekend, response times may be longer. Please be patient.
-
-**Office Hours**: MWF from 2:00pm-5:00pm, TR from 3:30pm-5:00pm in 23 Illini Hall (CITES Computer Lab), or by appointment
-
-**Website(s)**: General information about the project will be posted on [Compass2g](https://compass2g.illinois.edu/webapps/login/). Assignments will be posted on [Lon-Capa](lon-capa.illinois.edu) under the James Scholar folder. The textbook can be found at https://rossdrucker.github.io/STAT-100-Honors-Project/
-
-**Project Objective**: The goal of this project is to make students comfortable using the R programming language for a variety of uses. By the end, students should be able to perform basic calculations in R for both STAT 100 concepts and personal use.
-
-**HCLA**: In order to receive credit for this project, you must get an HCLA (either paper form or electronic) signed no later than **Monday, January 29th at 11:59pm**. Since the project is meant to run alongside class material, signups after this date will not be accepted.
-
-**Topics** (not in order; these may be updated throughout the semester):
-
-1)	R's interface and using R as a calculator
-
-2)	Data types
-
-3)	Descriptive statistics
-
-4)	Regression and model creation
-
-5)	Plotting, histograms, and visualization
-
-6)	Functions and control structures
-
-7)	Document rendering and scripting
-
-8)	Coding Style
-
-9)	Hypothesis testing
-
-10)	Probability
-
-**Grading Policy**: 
--	Since this is the first semester for this version of the honors project, there's not a set number of assignments. There will most likely be around 8-12 assignments (due every 1 to 1.5 weeks)
-
--	Each week, students should expect to spend 2-3 hours on readings and assignments
-
--	All assignments will be posted on (and therefore submitted to) Lon-Capa. 
-
--	Point values will vary by assignment
-
--	In order to receive credit for the project, you must complete all assignments with an (combined) average of 85% or higher
-
--	Assignments will be available for one week after posting. No late assignments will be accepted
-
-**Academic Integrity**: All students are expected to abide by the campus regulations on academic integrity, which can be found [here](http://studentcode.illinois.edu/article1_part4_1-401.html). These standards will be enforced and infractions of these rules will not be tolerated in this course. Such behavior includes sharing or copying any part of another student's assignment or allowing another student to copy any part of your assignment.
-
-**Changes**: The coordinator reserves the right to change any of the information in this syllabus. It is the student's responsibility to refer back to the syllabus to see pending changes.
+**The why**: Why not!? It's a great way to get your James Scholar credit, as well as to learn a useful program in the process. Knowledge of R is a very marketable skill. Also, the project is in sync with class. You'll be able to see how what you learn in class can be done in `R`. This will help reinforce the concepts that you need to know to succeed in Stat 100 and give you an introduction to programming
 
 ## About This Book {-}
 
