--- a/00-syllabus.Rmd
+++ b/00-syllabus.Rmd
@@ -18,6 +18,8 @@ Bad subject lines can look like this:
 
 In your email, please include a description of the problem you're having and any relevant code and/or error messages in the form of scripts or screenshots. Failure to do so may result in longer response times and/or no response altogether. You can send emails from any email address you have. Allow up to 24 hours for a response if you send an email Monday through Thursday. Over the weekend, response times may be longer. Please be patient.
 
+**Discussion board**: You can find the link to the project's discussion board [here](https://compass2g.illinois.edu/webapps/blackboard/content/launchLink.jsp?course_id=_36396_1&content_id=_3035841_1&mode=view). Feel free to ask questions or post resources you've found helpful here, but please don't post any code you write. The coordinator will respond as soon as possible, but feel free to help each other out (similar to the Lon-Capa discussions at the bottom of each page). 
+
 **Office Hours**: MWF from 2:00pm-5:00pm, TR from 3:30pm-5:00pm in 23 Illini Hall (CITES Computer Lab), or by appointment
 
 **Website(s)**: General information about the project will be posted on [Compass2g](https://compass2g.illinois.edu/webapps/login/). Assignments will be posted on [Lon-Capa](lon-capa.illinois.edu) under the James Scholar folder. The textbook can be found at https://rossdrucker.github.io/STAT-100-Honors-Project/
