--- a/08-histograms.Rmd
+++ b/08-histograms.Rmd
@@ -1,7 +1,7 @@
 # (PART) Exploring Data {-}
 
 ```{r 08-setup, echo = FALSE}
-knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
+knitr::opts_chunk$set(fig.align = "center", warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
 library(magrittr)
 ```
 
