--- a/11-percentiles-and-boxplots.Rmd
+++ b/11-percentiles-and-boxplots.Rmd
@@ -1,7 +1,7 @@
 # Percentiles and Box Plots
 
 ```{r 11-setup, echo = FALSE}
-knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
+knitr::opts_chunk$set(fig.align = "center", warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
 ```
 
 ## Percentiles
