--- a/12-correlation.Rmd
+++ b/12-correlation.Rmd
@@ -1,7 +1,7 @@
 # (PART) Linear Regression {-}
 
 ```{r 12-setup, echo = FALSE}
-knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
+knitr::opts_chunk$set(fig.align = "center", warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
 ```
 
 # Scatter Plots and Correlation
