--- a/13-regression.Rmd
+++ b/13-regression.Rmd
@@ -1,7 +1,7 @@
 # Linear Regression
 
 ```{r 13-setup, echo = FALSE}
-knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
+knitr::opts_chunk$set(fig.align = "center", warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
 ```
 
 Statistics tries to do two things:
