--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ github-repo: rossdrucker/STAT-100-Honors-Project
 # Intro {-}
 
 ```{r index-setup, echo = FALSE}
-knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
+knitr::opts_chunk$set(fig.align = "center", warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
 library(magrittr)
 ```
 
